[package]
name = "rusty_snake_markov"
version = "0.1.1"
authors = ["zomatree <angelokontaxis@hotmail.com>"]
edition = "2018"
include = ["src/lib.rs", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
markov = "*"

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[package.metadata.maturin]
classifier = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Rust",
]

[lib]
name = "rusty_snake_markov"
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1  # slow build but possibly faster runtime
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
rpath = false